<resources>
    <string name="app_name">Chess Clock</string>
    <string name="moves">Moves :</string>
    <string name="_0">0</string>
    <string name="_10_00">10:00</string>
    <string name="settings">Settings</string>
    <string name="fischer_blitz_5_0">Fischer Blitz 5|0</string>
    <string name="bullet_1_2">Bullet 1|2</string>
    <string name="fischer_5_5">Fischer 5|5</string>
    <string name="fischer_rapid_10_5">Fischer Rapid 10|5</string>
    <string name="done">Done</string>
</resources>